# uchitil-live

./: .gitignore  .gitmodules  BLUETOOTH_PLAYBACK_NOTICE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PRIVACY_POLICY.md  README.md  start.sh
.github/: issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ACCELERATION_GUIDE.md  README_DEVTEST.md  WORKFLOWS_OVERVIEW.md  build-devtest.yml  build-linux.yml  build-macos.yml  build-test.yml  build-windows.yml  build.yml  pr-main-check.yml  release.yml
backend/: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile.app  Dockerfile.server-cpu  Dockerfile.server-gpu  Dockerfile.server-macos  README.md  SCRIPTS_DOCUMENTATION.md  build-docker.ps1  build-docker.sh  build_whisper.cmd  build_whisper.sh  clean_start_backend.cmd  clean_start_backend.sh  debug_cors.py  docker-compose.yml  download-ggml-model.cmd  install_dependancies_for_windows.ps1  requirements.txt  run-docker.ps1  run-docker.sh  set_env.sh  setup-db.ps1  setup-db.sh  start_python_backend.cmd  start_whisper_server.cmd  start_with_output.ps1
backend/app/: db.py  main.py  schema_validator.py  transcript_processor.py
backend/docker/: entrypoint.sh
backend/examples/: run_summary_workflow.py
docs/: BUILDING.md  GPU_ACCELERATION.md  architecture.md  building_in_linux.md
frontend/: .env.example  .gitignore  API.md  README.md  build-gpu.bat  build-gpu.ps1  build-gpu.sh  build.bat  build.ps1  clean_build.sh  clean_build_windows.bat  clean_run.sh  clean_run_windows.bat  dev-gpu.bat  dev-gpu.ps1  dev-gpu.sh  next.config.js  package-app.sh  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontend/scripts/: auto-detect-gpu.js  load-env.ps1  tauri-auto.js
frontend/src-tauri/: .gitignore  CLEANUP_PLAN.md  Cargo.toml  Info.plist  LOGGING_OPTIMIZATIONS.md  NOTIFICATION_TESTING.md  build.rs  check_screen_permission.swift  entitlements.plist  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/config/: backend_config.json
frontend/src-tauri/icons/: app_icon.icns
frontend/src-tauri/migrations/: 20250916100000_initial_schema.sql  20250920155811_add_openrouter_api_key.sql  20251006000000_add_audio_sync_fields.sql  20251010153942_add_ollama_endpoint.sql  20251101000000_add_summary_backup.sql  20251105120000_add_pro_license_custom_openai.sql  20251110000000_add_grace_period_to_licensing.sql  20251110000001_add_speaker_field.sql  20251223000000_add_meeting_notes.sql  20251229000000_add_gemini_api_key.sql
frontend/src-tauri/scripts/: sign-windows.ps1
frontend/src-tauri/src/: lib.rs  main.rs  onboarding.rs  state.rs  tray.rs  utils.rs
frontend/src-tauri/src/analytics/: analytics.rs  commands.rs  mod.rs
frontend/src-tauri/src/api/: api.rs  commands.rs  mod.rs
frontend/src-tauri/src/audio/: async_logger.rs  audio_processing.rs  batch_processor.rs  buffer_pool.rs  device_detection.rs  device_monitor.rs  diagnostics.rs  encode.rs  ffmpeg.rs  ffmpeg_mixer.rs  hardware_detector.rs  incremental_saver.rs  level_monitor.rs  macos_permissions.rs  mod.rs  permissions.rs  pipeline.rs  playback_monitor.rs  post_processor.rs  recording_commands.rs  recording_manager.rs  recording_preferences.rs  recording_saver.rs  recording_state.rs  simple_level_monitor.rs  stream.rs  system_audio_commands.rs  system_audio_stream.rs  system_audio_types.ts  system_detector.rs  vad.rs
frontend/src-tauri/src/audio/capture/: backend_config.rs  core_audio.rs  microphone.rs  mod.rs  system.rs
frontend/src-tauri/src/audio/devices/: configuration.rs  discovery.rs  fallback.rs  microphone.rs  mod.rs  speakers.rs
frontend/src-tauri/src/audio/devices/platform/: linux.rs  macos.rs  mod.rs  windows.rs
frontend/src-tauri/src/audio/transcription/: engine.rs  mod.rs  parakeet_provider.rs  provider.rs  whisper_provider.rs  worker.rs
frontend/src-tauri/src/console_utils/: commands.rs  console_utils.rs  mod.rs
frontend/src-tauri/src/database/: commands.rs  manager.rs  mod.rs  models.rs  setup.rs
frontend/src-tauri/src/database/repositories/: meeting.rs  mod.rs  setting.rs  summary.rs  transcript.rs  transcript_chunk.rs
frontend/src-tauri/src/notifications/: commands.rs  manager.rs  mod.rs  settings.rs  system.rs  types.rs
frontend/src-tauri/src/ollama/: commands.rs  metadata.rs  mod.rs  ollama.rs
frontend/src-tauri/src/openrouter/: commands.rs  mod.rs  openrouter.rs
frontend/src-tauri/src/parakeet_engine/: commands.rs  mod.rs  model.rs  parakeet_engine.rs
frontend/src-tauri/src/summary/: commands.rs  llm_client.rs  mod.rs  processor.rs  service.rs  template_commands.rs
frontend/src-tauri/src/summary/summary_engine/: client.rs  commands.rs  mod.rs  model_manager.rs  models.rs  sidecar.rs
frontend/src-tauri/src/summary/templates/: defaults.rs  loader.rs  mod.rs  types.rs
frontend/src-tauri/src/whisper_engine/: _stderr_suppressor.rs  commands.rs  mod.rs  parallel_commands.rs  parallel_processor.rs  system_monitor.rs  whisper_engine.rs
frontend/src-tauri/templates/: README.md  daily_standup.json  project_sync.json  psychatric_session.json  retrospective.json  sales_marketing_client_call.json  standard_meeting.json
frontend/src/app/: globals.css  layout.tsx  metadata.ts  metadata.tsx  page.tsx
frontend/src/components/: About.tsx  AnalyticsConsentSwitch.tsx  AnalyticsDataModal.tsx  AnalyticsProvider.tsx  AudioBackendSelector.tsx  AudioLevelMeter.tsx  BluetoothPlaybackWarning.tsx  BuiltInModelManager.tsx  ChunkProgressDisplay.tsx  ComplianceNotification.tsx  ConfidenceIndicator.tsx  ConsoleToggle.tsx  CustomDialog.tsx  DeviceSelection.tsx  EditableTitle.tsx  EmptyStateSummary.tsx  Info.tsx  LanguageSelection.tsx  Logo.tsx  MessageToast.tsx  ModelDownloadProgress.tsx  ModelSettingsModal.tsx  ParakeetModelManager.tsx  PermissionWarning.tsx  PreferenceSettings.tsx  RecordingControls.tsx  SettingTabs.tsx  (+10 more)
llama-helper/: Cargo.toml
llama-helper/src/: main.rs
scripts/: generate-update-manifest-github.js  inject_transcript.py  test-update-locally.js
(+87 files in other folders)
