[package]
name = "llama-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
llama-cpp-2 = "0.1.128"
encoding_rs = "0.8"

[features]
default = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"  # Optimize for size for faster loading
